language/move-lang/tests/move_check/typing/mutate_immutable.exp
error[E04006]: invalid subtype
  ┌─ tests/move_check/typing/mutate_immutable.move:5:10
  │
5 │         *(s: &S) = S { f: 0 };
  │          ^^^^^^^
  │          │   │
  │          │   Given: '&0x8675309::M::S'
  │          Invalid mutation. Expected a mutable reference
  │          Expected: '&mut _'

error[E04006]: invalid subtype
  ┌─ tests/move_check/typing/mutate_immutable.move:6:10
  │
6 │         *&0 = 1;
  │          ^^
  │          │
  │          Invalid mutation. Expected a mutable reference
  │          Expected: '&mut _'
  │          Given: '&{integer}'

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/mutate_immutable.move:10:10
   │
 9 │         let x_ref: &u64 = x_ref;
   │                    ---- Given: '&u64'
10 │         *x_ref = 0;
   │          ^^^^^
   │          │
   │          Invalid mutation. Expected a mutable reference
   │          Expected: '&mut _'

